fix(prose): blockquote dark mode

--- a/resources/css/base/base.css
+++ b/resources/css/base/base.css
@@ -17,4 +17,8 @@
         @apply text-sky-magenta;
     }
 
+    .prose blockquote
+    {
+        @apply dark:text-powder;
+    }
 }
